@@ -1,5 +1,10 @@
 == 1.1.3 / 2011-07-30
+* Converted to 'hoe' for release.
+* Converted tests to RSpec 2.
 * Bugs fixed:
+  - Issue 4 (https://github.com/halostatue/diff-lcs/issues/4) fixed.
+    In the process, HTMLDiff was made easier to use outside of the htmldiff
+    command.
 
 == 1.1.2 / 2004-10-20
 * Fixed a problem reported by Mauricio Fernandez in htmldiff. Future versions
